@@ -1,5 +1,7 @@
 *SVN*
 
+* Added before(), after(), and on() callback creation methods. [Jamis Buck]
+
 * Fix broken check! method for some deployment strategies. [Jamis Buck]
 
 * deploy:cold should also run migrations before starting the app [Jamis Buck]
